force-app/main/default/objects/Activity/Activity.object-meta.xml
<CustomObject>
</CustomObject>