force-app/main/default/objects/Activity/fields/CanaldeComunicacao__c.field-meta.xml
<CustomField>
    <fullName>CanaldeComunicacao__c</fullName>
    <label>Canal de comunicação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presencial</fullName>
            </value>
            <value>
                <fullName>Vídeo Chamada</fullName>
            </value>
            <value>
                <fullName>Ligação</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>