force-app/main/default/objects/Activity/fields/classificacaoLeadAtividade__c.field-meta.xml
<CustomField>
    <fullName>classificacaoLeadAtividade__c</fullName>
    <label>Classificação do Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>classificacao_lead_lista</valueSetName>
    </valueSet>
</CustomField>