force-app/main/default/objects/Activity/fields/comentariosReuniao__c.field-meta.xml
<CustomField>
    <fullName>comentariosReuniao__c</fullName>
    <label>Comentários sobre a reunião</label>
    <type>TextArea</type>
</CustomField>