force-app/main/default/objects/Activity/fields/Criado_Por_Automacao__c.field-meta.xml
<CustomField>
    <fullName>Criado_Por_Automacao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se este evento foi criado automaticamente pela automação do sistema quando um lead foi classificado como &quot;Interessado&quot;. Quando marcado como verdadeiro, o lead associado não pode ser editado no appointmentEditor.</description>
    <label>Criado Por Automação</label>
    <type>Checkbox</type>
</CustomField>