force-app/main/default/objects/Activity/fields/customColor__c.field-meta.xml
<CustomField>
    <fullName>customColor__c</fullName>
    <label>Cor customizada</label>
    <length>144</length>
    <type>Text</type>
</CustomField>