force-app/main/default/objects/Activity/fields/Data_de_vencimento_da_Atividade__c.field-meta.xml
<CustomField>
    <fullName>Data_de_vencimento_da_Atividade__c</fullName>
    <label>Data de vencimento da Atividade</label>
    <type>DateTime</type>
</CustomField>