force-app/main/default/objects/Activity/fields/fase_evento__c.field-meta.xml
<CustomField>
    <fullName>fase_evento__c</fullName>
    <label>Fase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primeira Reunião</fullName>
            </value>
            <value>
                <fullName>Devolutiva</fullName>
            </value>
            <value>
                <fullName>Negociação</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>