force-app/main/default/objects/Activity/fields/gestor__c.field-meta.xml
<CustomField>
    <fullName>gestor__c</fullName>
    <label>Gestor</label>
    <length>144</length>
    <type>Text</type>
</CustomField>