force-app/main/default/objects/Activity/fields/liderComercial__c.field-meta.xml
<CustomField>
    <fullName>liderComercial__c</fullName>
    <label>Líder Comercial</label>
    <length>144</length>
    <type>Text</type>
</CustomField>