force-app/main/default/objects/Activity/fields/ligacaoFoiAtendida__c.field-meta.xml
<CustomField>
    <fullName>ligacaoFoiAtendida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ligação foi atendida?</label>
    <type>Checkbox</type>
</CustomField>