force-app/main/default/objects/Activity/fields/NomeTarefa__c.field-meta.xml
<CustomField>
    <fullName>NomeTarefa__c</fullName>
    <label>Nome de tarefa</label>
    <length>80</length>
    <type>Text</type>
</CustomField>