force-app/main/default/objects/Activity/fields/Oportunidade_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_Relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oportunidade associada a este evento quando o evento está vinculado a um Lead através do campo WhoId. Este campo permite que eventos tenham relacionamentos duplos com Leads e Oportunidades simultaneamente.</description>
    <inlineHelpText>Esta oportunidade está relacionada ao Lead deste evento</inlineHelpText>
    <label>Oportunidade Relacionada</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Eventos Relacionados</relationshipLabel>
    <relationshipName>Eventos_Relacionados</relationshipName>
    <type>Lookup</type>
</CustomField>