force-app/main/default/objects/Activity/fields/produto_evento__c.field-meta.xml
<CustomField>
    <fullName>produto_evento__c</fullName>
    <label>Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gestão de Patrimônio</fullName>
            </value>
            <value>
                <fullName>Liquidação Otimizada</fullName>
            </value>
            <value>
                <fullName>Consultoria Societária</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>