force-app/main/default/objects/Activity/fields/reuniaoAconteceu__c.field-meta.xml
<CustomField>
    <fullName>reuniaoAconteceu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reunião aconteceu?</label>
    <type>Checkbox</type>
</CustomField>