force-app/main/default/objects/Activity/fields/reuniaoCriada__c.field-meta.xml
<CustomField>
    <fullName>reuniaoCriada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reunião Criada</label>
    <type>Checkbox</type>
</CustomField>