force-app/main/default/objects/Activity/fields/salaReuniao__c.field-meta.xml
<CustomField>
    <fullName>salaReuniao__c</fullName>
    <description>Escolha a sala onde a reunião vai acontecer</description>
    <inlineHelpText>Escolha a sala onde a reunião vai acontecer</inlineHelpText>
    <label>Sala de reunião</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>salaPrincipal</fullName>
                <label>Sala Principal</label>
            </value>
            <value>
                <fullName>salaGabriel</fullName>
                <label>Sala do Gabriel</label>
            </value>
            <value>
                <fullName>Outra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>