force-app/main/default/objects/Activity/fields/sdr__c.field-meta.xml
<CustomField>
    <fullName>sdr__c</fullName>
    <label>SDR</label>
    <length>144</length>
    <type>Text</type>
</CustomField>