force-app/main/default/objects/Activity/fields/statusReuniao__c.field-meta.xml
<CustomField>
    <fullName>statusReuniao__c</fullName>
    <label>Status da reunião</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Adiado</fullName>
            </value>
            <value>
                <fullName>Reagendado</fullName>
            </value>
            <value>
                <fullName>Reunião aconteceu</fullName>
                <isActive>false</isActive>
                <label>Reunião aconteceu</label>
            </value>
            <value>
                <fullName>Reunião não aconteceu</fullName>
                <isActive>false</isActive>
                <label>Reunião não aconteceu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>