force-app/main/default/objects/Activity/fields/tipoReuniao__c.field-meta.xml
<CustomField>
    <fullName>tipoReuniao__c</fullName>
    <label>Tipo de Reunião</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reunião Presencial</fullName>
            </value>
            <value>
                <fullName>Reunião Online</fullName>
            </value>
            <value>
                <fullName>Ligação Telefônica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>